Fixed the alignment in the about page

--- a/src/component/CSS/About.css
+++ b/src/component/CSS/About.css
@@ -50,5 +50,8 @@
     margin-bottom: 2rem;
 }
 @media (max-width: 800px) {
-
+    .snapchat-lenses {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
