--- a/src/component/CSS/Contact.css
+++ b/src/component/CSS/Contact.css
@@ -1,16 +1,18 @@
-img {
+.header-image {
     height: 600px;
     border: solid black 5px;
     border-radius: 5%;
-   }
-   .body {
-    
-      
-   }
+}
+.body {
+     
+}
 .inside {
-    
     width: 1200px;
 }
 @media (max-width: 800px) {
-
+    .header-image {
+        height: 200px;
+        border: solid black 5px;
+        border-radius: 5%;
+    }
 }
